# uribo-neural-network

./: .gitignore  README.md  pyproject.toml
src/: main.py  model.py
src/model/: create_model.py  layer.py  neuron.py  nn.py
