[project]
name = "uribo-neural-network"
version = "0.1.0"
description = "Neural Network written from scratch using only Numpy as a dependency"
authors = [
    {name = "Kevin",email = "kevinhernem@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "ruff (>=0.11.7,<0.12.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

package-mode = false